2010-10-18  Sam Weinig  <sam@webkit.org>

        Fix Qt build.

        * WebKit2.pro:

2010-10-18  Anders Carlsson  <andersca@apple.com>

        Reviewed by Simon Fraser.

        Don't try to change accelerated compositing mode if the web page is closed
        https://bugs.webkit.org/show_bug.cgi?id=47852

        changeAcceleratedCompositingMode ends up sending a sync message to the UI process which is unnecessary if
        the UI process is being torn down.
        
        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::WebPage):
        (WebKit::WebPage::changeAcceleratedCompositingMode):
        (WebKit::WebPage::close):
        * WebProcess/WebPage/WebPage.h:

2010-10-18  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        <rdar://problem/8036034>
        WebKit2's WebProcess dies immediately on Mac due to DYLD_FRAMEWORK_PATH problem

        Pass the path to the WebKit2 framework along to the web process and don't rely on DYLD_FRAMEWORK_PATH being set.

        * Shared/mac/CommandLineMac.cpp:
        (WebKit::CommandLine::parse):
        * UIProcess/Launcher/mac/ProcessLauncherMac.mm:
        (WebKit::ProcessLauncher::launchProcess):
        * mac/MainMac.cpp:
        (main):

2010-10-18  Jessie Berlin  <jberlin@apple.com>

        Reviewed by Sam Weinig.

        Need a WebKit2 equivalent of the WebKit1 WebUserContentURLPattern.
        https://bugs.webkit.org/show_bug.cgi?id=47783

        * Shared/API/c/WKBase.h:

        * Shared/API/c/WKSharedAPICast.h:

        * Shared/API/c/WKUserContentURLPattern.cpp: Added.
        (WKUserContentURLPatternGetTypeID):
        (WKUserContentURLPatternCreate):
        (WKUserContentURLPatternMatchesURL):
        * Shared/API/c/WKUserContentURLPattern.h: Added.

        * Shared/APIObject.h:

        * Shared/UserMessageCoders.h:
        Use the original pattern string to encode and decode a UserContentURLPattern.
        (WebKit::UserMessageEncoder::baseEncode):